# jcircuit

./: .gitignore  README.md  environment.yml  example.ipynb  install.sh  package.json  push_tag.sh  pyproject.toml
.github/workflows/: python-publish.yml
jcircuit/: __init__.py
src/: widget.html  widget.js
