[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jcircuit_sebranchett"
version = "0.0.5"
dependencies = ["anywidget", "jupyterlab"]
readme = "README.md"

# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles"]


[tool.hatch.build]
artifacts = ["jcircuit_sebranchett/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["jcircuit_sebranchett/static/widget.js"]
skip-if-exists = ["src/de,p=widget/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
